# RBT-

./: .gitignore  Makefile  README.md  code.cc  setup.sh
backend/: CMakeLists.txt  Dockerfile  Makefile  README.md
backend/src/: main.cpp
backend/src/api/: tree_api.cpp  tree_api.h
backend/src/rbtree/: node.h  tree.h  tree.tpp
backend/src/utils/: json_converter.cpp  json_converter.h
backend/tests/: test_rbtree.cpp
frontend/: index.html
frontend/public/: index.html
frontend/src/css/: components.css  style.css
frontend/src/js/: app.js
frontend/src/js/api/: animation.js  client.js  endpoints.js
frontend/src/js/components/: control-panel.js  stats-panel.js  tree-visualizer.js
frontend/src/js/utils/: animation.js  svg-helpers.js
include/rbtree/: node.h  tree.h  tree.tpp  value.h
scripts/: build.sh
